src/parser_tests/tests_input/unit/good/Good21.ty
singleton class Loop { 
    
    actions: {
        loop: (list: SomeListType) -> Int = {
            for (element: Int; in list) {
                3
            }
            2
        }
    }
}
