src/parser_tests/tests_input/unit/bad/Bad16.ty
singleton class Random { 
    
    functions: {
        randomValue: (seed: Int) -> = 3
    }
}
